@@ -4,4 +4,6 @@ dependencies {
   compile project(':pegasus-common')
   compile externalDependency.commonsIo
   compile externalDependency.codemodel
+
+  testCompile externalDependency.testng
 }
