@@ -26,7 +26,9 @@ import com.linkedin.data.template.DataTemplateUtil;
 import com.linkedin.data.template.DirectArrayTemplate;
 import com.linkedin.data.template.DirectMapTemplate;
 import com.linkedin.data.template.GetMode;
+import com.linkedin.data.template.RecordTemplate;
 import com.linkedin.data.template.SetMode;
+import com.linkedin.data.template.UnionTemplate;
 import com.linkedin.data.template.WrappingArrayTemplate;
 import com.linkedin.data.template.WrappingMapTemplate;
 
@@ -84,8 +86,12 @@ public class JavaCodeGeneratorBase
   protected final JClass _setModeClass;
   protected final JClass _stringBuilderClass;
   protected final JClass _stringClass;
+
+  protected final JClass _recordClass;
+  protected final JClass _unionClass;
   protected final JClass _wrappingArrayClass;
   protected final JClass _wrappingMapClass;
+
   protected final JFieldRef _disallowNullSetMode;
   protected final JFieldRef _strictGetMode;
   /**
@@ -113,12 +119,36 @@ public class JavaCodeGeneratorBase
     _setModeClass = getCodeModel().ref(SetMode.class);
     _stringBuilderClass = getCodeModel().ref(StringBuilder.class);
     _stringClass = getCodeModel().ref(String.class);
-    _wrappingArrayClass = getCodeModel().ref(WrappingArrayTemplate.class);
-    _wrappingMapClass = getCodeModel().ref(WrappingMapTemplate.class);
+
+    _recordClass = getRecordClass();
+    _unionClass = getUnionClass();
+    _wrappingArrayClass = getWrappingArrayClass();
+    _wrappingMapClass = getWrappingMapClass();
+
     _disallowNullSetMode = getCodeModel().ref(SetMode.class).staticRef("DISALLOW_NULL");
     _strictGetMode = getCodeModel().ref(GetMode.class).staticRef("STRICT");
 
     _package = getCodeModel()._package(defaultPackage == null ? "" : defaultPackage);
+  }
+
+  protected JClass getRecordClass()
+  {
+    return getCodeModel().ref(RecordTemplate.class);
+  }
+
+  protected JClass getUnionClass()
+  {
+    return getCodeModel().ref(UnionTemplate.class);
+  }
+
+  protected JClass getWrappingArrayClass()
+  {
+    return getCodeModel().ref(WrappingArrayTemplate.class);
+  }
+
+  protected JClass getWrappingMapClass()
+  {
+    return getCodeModel().ref(WrappingMapTemplate.class);
   }
 
   protected static boolean isReserved(String name)
