@@ -1,0 +1,35 @@
+/*
+   Copyright (c) 2015 LinkedIn Corp.
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+
+package com.linkedin.pegasus.generator;
+
+import org.testng.Assert;
+import org.testng.annotations.Test;
+
+/**
+ * Test subclassing JavaDataTemplateGenerator.
+ */
+public class TestCustomJavaDataTemplateGenerator
+{
+  @Test
+  public void testCreateGenerator()
+  {
+    JavaDataTemplateGenerator generator = new CustomJavaDataTemplateGenerator("defaultPackage");
+    Assert.assertEquals(generator.getRecordClass().name(), "RecordTemplate");
+    Assert.assertEquals(generator.getWrappingArrayClass().name(), "WrappingArrayTemplate");
+    Assert.assertEquals(generator.getWrappingMapClass().name(), "WrappingMapTemplate");
+  }
+}
